# rational-polar-decomposition

./: .gitignore  AGENTS.md  OPTIMIZATION_LOG.md  README.md  baseline.jsonl  bench_profile.py  dwh2.py  format_comparison.py  profile_instability.py  pyproject.toml  references.bib  run_all_profiles.py
docs/: README.md  benchmarking.md  dwh2-smallside-diagnosis.md  implementation.md
results/: bench_hard_compile.jsonl  bench_hard_no_compile.jsonl  comparison.md  dwh2_baseline.jsonl  gns_baseline.jsonl  hard_compile.jsonl  hard_no_compile.jsonl  instability_profile.md  profile_results_all.json
scripts/: bench_common.py  bench_profile.py  format_comparison.py  profile_bottlenecks.py  profile_instability.py  run_all_profiles.py
src/polar_decomposition/: __init__.py  bench.py  dwh2.py  norm_sweep.py  normalization.py  pe5.py  precond.py  profile_detailed.py  profile_gpu.py  triton_ops.py
src/polar_decomposition/algorithms/: __init__.py  dwh2.py  pe5.py
src/polar_decomposition/cli/: __init__.py  bench.py  norm_sweep.py  profile_gpu.py
src/polar_decomposition/kernels/: __init__.py
src/polar_decomposition/utils/: __init__.py  normalization.py  precond.py
stable/: gns_baseline.jsonl
