[project]
name = "polar-decomposition"
version = "0.1.0"
description = "Lean tall-matrix polar decomposition benchmark and kernels"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "triton-windows>=3.6.0.post26; sys_platform == 'win32'",
    "gram-newton-schulz",
    "quack-kernels",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]
torchvision = [{ index = "pytorch-cuda" }]
torchaudio = [{ index = "pytorch-cuda" }]
gram-newton-schulz = { git = "https://github.com/Dao-AILab/gram-newton-schulz", tag = "v0.1.0" }
quack-kernels = { git = "https://github.com/Dao-AILab/quack", tag = "v0.3.8" }

[tool.uv]
override-dependencies = [
    "nvidia-cutlass-dsl; sys_platform == 'linux'",
    "nvidia-cutlass-dsl-libs-base; sys_platform == 'linux'",
    "apache-tvm-ffi; sys_platform == 'linux'",
    "torch-c-dlpack-ext; sys_platform == 'linux'",
]

[tool.ruff.lint]
ignore = ["E741"]
