[project]
name = "polar-decomposition"
version = "0.1.0"
description = "Lean tall-matrix polar decomposition benchmark and kernels"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "triton-windows>=3.6.0.post26; sys_platform == 'win32'",
    "gram-newton-schulz",
    "quack-kernels",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bench_profile", "dwh2"]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]
torchvision = [{ index = "pytorch-cuda" }]
torchaudio = [{ index = "pytorch-cuda" }]
gram-newton-schulz = { git = "https://github.com/Dao-AILab/gram-newton-schulz", tag = "v0.1.0" }
quack-kernels = { git = "https://github.com/Dao-AILab/quack", tag = "v0.3.8" }

[tool.uv]
override-dependencies = [
    "nvidia-cutlass-dsl; sys_platform == 'linux'",
    "nvidia-cutlass-dsl-libs-base; sys_platform == 'linux'",
    "apache-tvm-ffi; sys_platform == 'linux'",
    "torch-c-dlpack-ext; sys_platform == 'linux'",
]

[project.scripts]
compare-hard = "bench_profile:main_hard"
baseline-hard = "bench_profile:main_baseline"
promote-baseline = "bench_profile:main_promote"

[tool.ruff.lint]
ignore = ["E741"]
